# lifemesh_voice

./: CMakeLists.txt  README.md
include/: NoiseSuppressorSpeex.hpp  RttEchoServer.hpp  RttProbe.hpp  UdpTransport.hpp  VoiceEngine.hpp
src/: NoiseSuppressorSpeex.cpp  RttEchoServer.cpp  RttProbe.cpp  UdpTransport.cpp  VoiceEngine.cpp  main_loopback.cpp  main_udp.cpp
